# 0xclaw

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
0xclaw/: cli_args.py  main.py
0xclaw/config/: config.json  model_profiles.json
0xclaw/orchestration/: __init__.py  contracts.py  model_profiles.py  phase_completion.py  router.py  session_control.py  state.py  write_guard.py
0xclaw/runtime/: __init__.py  __main__.py
0xclaw/runtime/agent/: __init__.py  coding_executor.py  context.py  loop.py  memory.py  skills.py  subagent.py  subagent_backends.py
0xclaw/runtime/bus/: __init__.py  queue.py
0xclaw/runtime/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  qq.py  slack.py  telegram.py  whatsapp.py
0xclaw/runtime/cli/: commands.py
0xclaw/runtime/config/: __init__.py  loader.py  schema.py
0xclaw/runtime/cron/: __init__.py  service.py
0xclaw/runtime/heartbeat/: __init__.py  service.py
0xclaw/runtime/skills/: README.md
docs/: CODING_SUBAGENT_CLAUDE_CODE.md  README.md
docs/integrations/: claude-code-subagent.md
launcher/: __init__.py  __main__.py
scripts/: hackathon_runner.py  run_phase.py  smoke_test_claude_code.py  start.sh  verify_setup.sh
tests/: test_contracts.py  test_legacy_pipeline_status.py  test_main_handoff.py  test_model_profiles.py  test_phase_completion.py  test_phase_completion_extended.py  test_router.py  test_safe_resets.py  test_session_control.py  test_state_and_resume.py  test_state_machine.py  test_write_guard.py
workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  USER.md
(+30 files in other folders)
