[project]
name = "0xclaw"
version = "0.1.0"
description = "Autonomous Hackathon Agent — UK AI Agent Hackathon EP4 x OpenClaw"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "0xClaw Team"}
]
keywords = ["ai", "agent", "hackathon", "openclaw"]

dependencies = [
    "python-telegram-bot>=21.0,<23.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "rich>=14.0.0,<15.0.0",
    "typer>=0.12.0,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "openai>=1.66.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "json-repair>=0.30.0,<1.0.0",
    "litellm>=1.60.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "websockets>=12.0,<16.0",
    "slack-sdk>=3.27.0,<4.0.0",
    "slackify-markdown>=0.1.1,<1.0.0",
    "dingtalk-stream>=0.21.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[project.scripts]
0xclaw = "launcher.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["0xclaw", "launcher"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "I001"]
